fix footer overlapping content

--- a/src/app/assets/layout.css
+++ b/src/app/assets/layout.css
@@ -18,7 +18,7 @@ a[ng-click]{
   position: absolute;
   min-height: 100%;
   width: 100%;
-  padding-top: 52px;
+  padding: 52px 0 68px;
 }
 
 /* Main menu */
